<resources>
    <string name="white_app_name" translatable="false">Base Agent</string>
    <string name="app_name" translatable="false">Base MDM</string>
    <string name="admin_title">Administrator</string>
    <string name="vendor" translatable="false">The Bean Family</string>
    <string name="install_error">Error installing</string>
    <string name="file_create_error">Error creating file</string>
    <string name="dialog_enter_device_id_error">This ID is not registered at %s. Get the ID from \"Devices\" tab of the control panel.</string>
    <string name="dialog_enter_device_id_qrcode">QR code</string>
    <string name="dialog_enter_device_id_variants">Variants</string>
    <string name="dialog_enter_device_id_save">Save</string>
    <string name="dialog_enter_device_id_exit">Exit</string>
    <string name="dialog_enter_device_id_title">Enter the device ID at %s</string>
    <string name="main_start_preparations">Preparing to start</string>
    <string name="main_downloading_configuration">Updating configuration file</string>
    <string name="main_downloading_content">Updating data</string>
    <string name="main_update_applications">Installing and updating applications</string>
    <string name="dialog_root_message">You need ROOT access</string>
    <string name="main_application_start">Starting application</string>
    <string name="main_app_installing">Installing application</string>
    <string name="main_app_downloading">Downloading application</string>
    <string name="main_app_downloading_error">Failed to download the package</string>
    <string name="main_app_removing">Uninstalling application</string>
    <string name="main_file_downloading">Downloading file</string>
    <string name="main_file_downloading_error">Failed to download the file</string>
    <string name="main_activity_repeat">Retry</string>
    <string name="main_activity_reset">Reset</string>
    <string name="main_activity_wifi">WiFi</string>
    <string name="main_activity_cancel">Cancel</string>
    <string name="main_activity_details">Details</string>
    <string name="select_system_launcher">Select %s as a default launcher and check \'Always\':</string>
    <string name="dialog_network_error_title">Error connecting to %s. Please check the Internet connection and try again.</string>
    <string name="main_activity_update_config">Requesting configuration file from server</string>
    <string name="main_activity_applications_update">Updating applications</string>
    <string name="dialog_overlay_settings_title">Please allow the app to draw over other windows.\n\nThis option aids the blocking of unwanted apps, and enables emergency unlocking of the kiosk mode.\n\nTap \"Continue\" to open the settings. Find the \"%s\" item, grant the permission, then tap \"Back\".</string>
    <string name="dialog_manage_storage_title">Please allow the app to manage storage.\n\nThis option allows Base MDM to manage files on your device.</string>
    <string name="dialog_history_settings_title">Please allow the app to access usage data.\n\nThis option enables control of apps and settings.\n\nThis option may cause faster battery drain. To save battery, skip this option (use accessibility services or kiosk mode instead).\n\nTap \"Continue\" to open the settings. Find the \"%s\" item, grant the permission, then tap \"Back\".</string>
    <string name="dialog_history_settings_continue">Continue</string>
    <string name="dialog_history_settings_skip">Skip</string>
    <string name="dialog_unknown_sources_title">Please allow installation from unknown sources. A settings sheet will now open. Find \"Unknown sources\", allow the installation and click \"Back\".</string>
    <string name="dialog_unknown_sources_continue">Continue</string>
    <string name="dialog_miui_permissions_title">MIUI requires manual setup of custom permissions. App permissions window will now open. Tap \"Other permissions\", allow \"Display pop-up windows while running in the background\" and click \"Back\".</string>
    <string name="dialog_miui_developer_title">MIUI requires manual setup of your device. On the info screen, TAP 7 TIMES ON \"BUILD NUMBER\". This will enable developer settings.</string>
    <string name="dialog_miui_optimization_title">MIUI requires manual setup of your device. Developer settings window will now open. Scroll the screen down and uncheck \"MIUI optimization\".</string>
    <string name="dialog_administrator_mode_message">Please allow the app to work in the device administrator mode. A Settings sheet will now open. Select \"Device administrators\", find the \"%s\" item, activate the administrator, and tap \"Back\".</string>
    <string name="dialog_administrator_mode_continue">Continue</string>
    <string name="dialog_administrator_mode_skip">Skip</string>
    <string name="accessibility_service_description">Active app monitoring by the MDM application</string>
    <string name="dialog_accessibility_service_message">Please allow the app to use accessibility services. A Settings sheet will now open. Find the \"%s\" item, allow to use accessibility services, and tap \"Back\".</string>
    <string name="dialog_accessibility_service_continue">Continue</string>
    <string name="dialog_accessibility_service_skip">Skip</string>
    <string name="access_to_app_denied">The package is not allowed:</string>
    <string name="access_to_app_denied_2">Please ask your administrator to enable this package in the configuration.\n\nClick \'Close\' or Home button to proceed.</string>
    <string name="package_id_copied">The package ID is copied to the clipboard</string>
    <string name="dialog_app_not_allowed_close">Close</string>
    <string name="dialog_app_not_allowed_admin">Administrator</string>
    <string name="device_id">Device ID</string>
    <string name="imei">IMEI</string>
    <string name="serial_number">Serial number</string>
    <string name="phone_number">Phone number</string>
    <string name="launcher_version">Launcher version</string>
    <string name="close">Close</string>
    <string name="admin_change_device_id">Change device ID</string>
    <string name="admin_change_server_url">Change server URL</string>
    <string name="admin_allow_settings">Open settings</string>
    <string name="settings_allowed">You are allowed to change settings for 3 minutes.</string>
    <string name="admin_clear_restrictions">Clear restrictions</string>
    <string name="permissive_mode_enabled">You are allowed to run all apps for 3 minutes.</string>
    <string name="admin_refresh">Update configuration</string>
    <string name="admin_exit">Exit to system launcher</string>
    <string name="admin_reset_permissions">Check permissions</string>
    <string name="admin_reset_network">Reset network policy</string>
    <string name="admin_reset_network_hint">Network policies are cleared. You can now enable the network and reload the configuration.</string>
    <string name="reboot">Reboot device</string>
    <string name="reboot_failed">Not enough rights to reboot the device.</string>
    <string name="message_turn_on_gps">The settings screen will open. Please turn on GPS location on this screen and click Back.</string>
    <string name="message_turn_off_gps">The settings screen will open. Please TURN OFF GPS location on this screen and click Back.</string>
    <string name="message_turn_on_mobile_data">Mobile data is disabled! Please open the status bar and turn on mobile data.</string>
    <string name="message_turn_off_mobile_data">Mobile data is enabled. Please open the status bar and TURN OFF mobile data.</string>
    <string name="message_set_password">Your password quality is not good enough. The settings screen will open. Please change the password and click Back.</string>
    <string name="switch_off_blockings">Switching off restrictions...</string>
    <string name="kiosk_mode_requires_overlays">Kiosk mode disabled: no permission to draw over other windows. Please allow %s to draw over other windows.</string>
    <string name="enter_admin_password">Enter administrator password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="dialog_enter_password_login">Login</string>
    <string name="dialog_enter_password_cancel">Cancel</string>
    <string name="internal_error">The app encountered an internal error. Please reboot the device and retry the action.</string>
    <string name="empty_configuration">The configuration is not set, retrying to get from the server!</string>
    <string name="permissions_reset_hint">Close the admin panel to check and request permissions.</string>
    <string name="dialog_enter_server_error">Please enter a valid server URL.</string>
    <string name="dialog_enter_server_ok">OK</string>
    <string name="dialog_enter_server_title">Please enter the server URL</string>
    <string name="dialog_enter_server_hint" translatable="false">https://mdm.thebase.vn</string>
    <string name="critical_server_failure">Quit due to server fault! Please fix the issue and restart %s, or remove it completely and reinstall.</string>
    <string name="dialog_permission_title">The app requires the permissions to run. Please grant the requested permissions.</string>
    <string name="main_activity_exit">Exit</string>
    <string name="browser_not_found">Cannot open the webpage because the browser is not found. Please add a browser app to the device configuration.</string>
    <string name="invalid_web_link">Cannot open the web link because it is not well-formed. Please contact your administrator for details.</string>
    <string name="activity_not_found">Cannot perform the action %s because the activity is not found.</string>
    <string name="location_service_text">Device location is monitored</string>
    <string name="qrcode_contents_error">Invalid QR code contents. Please generate the provisioning QR code in the %s web panel.</string>
    <string name="device_locked">This device (%s) has been locked by the administrator.</string>
    <string name="fault_loop_detected">Oops, the launcher got an unrecoverable fault! Please contact your system administrator.</string>
    <string name="mqtt_service_text">Push notifications are active</string>
    <string name="background_location">%s requires the background location permission. Click \'Continue\' to open permissions, click \'Location\' and allow to determine location always.</string>
    <string name="location_disable">Disable location</string>
    <string name="background_location_continue">Continue</string>
    <string name="initializing_mdm">Initializing the mobile device management application...</string>
    <string name="dialog_server_error_title">MDM server %s returned an invalid response. Please contact your administrator.</string>
    <string name="mdm_choice_message">This device will be fully managed by your organization. Your data won\'t be private and can be erased or reviewed by your IT admin at any time.</string>
    <string name="work_profile_message">This device will get a managed work profile belonging to your organization. The work profile is separated from your private profile and you may switch between profiles at any time.</string>
    <string name="overlays_not_supported">Unfortunately overlays are not supported by your device.</string>
    <string name="admin_not_supported">Your device has no device administrator option. Click Skip to continue.</string>
    <string name="manage_storage_not_supported">Your device has no option to manage the external storage.</string>
    <string-array name="certificates" translatable="false">
        
        
        <item>isrg_root_x1.pem</item>
    </string-array>
    <string name="mqtt_menu_item">Change MQTT Server</string>
    <string name="dialog_enter_mqtt_server_error">Please enter valid MQTT domain</string>
    <string name="dialog_enter_mqtt_server_title">Please enter MQTT domain</string>
    <string name="mqtt_domain">Enter MQTT domain</string>
</resources>