<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
          android:orientation="vertical"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:paddingLeft="@dimen/activity_horizontal_margin"
          android:paddingRight="@dimen/activity_horizontal_margin"
          tools:context="com.base.launcher.ui.MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="@dimen/dialog_enter_device_id_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dialog_network_error_title"/>

        <TextView
            android:id="@+id/details"
            android:layout_width="@dimen/dialog_enter_device_id_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/main_activity_details"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:onClick="networkErrorDetailsClicked"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/repeatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_activity_repeat"
                android:onClick="networkErrorRepeatClicked"/>

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_activity_reset"
                android:onClick="networkErrorResetClicked"/>

            <Button
                android:id="@+id/wifiButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_activity_wifi"
                android:onClick="networkErrorWifiClicked"/>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_activity_cancel"
                android:onClick="networkErrorCancelClicked"/>

        </LinearLayout>

    </LinearLayout>

</layout>