<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="error" type="Boolean"/>
        <variable name="server" type="String"/>
    </data>

    <LinearLayout
          android:focusable="true"
          android:orientation="vertical"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:paddingLeft="@dimen/activity_horizontal_margin"
          android:paddingRight="@dimen/activity_horizontal_margin"
          tools:context="com.base.launcher.ui.MainActivity">

        <TextView
            android:layout_width="@dimen/dialog_enter_device_id_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            bind:boolToVisible="@{error}"
            android:text="@string/dialog_enter_server_error"/>

        <TextView
            android:layout_width="@dimen/dialog_enter_device_id_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            bind:boolToVisible="@{!error}"
            android:text="@string/dialog_enter_server_title"/>

        <EditText
            android:focusable="true"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/server_url"
            android:hint="@string/dialog_enter_server_hint"
            android:text="@{server}"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/showDeviceIdQrCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/button_text_size_small"
            android:text="@string/dialog_enter_device_id_qrcode"
            android:onClick="showDeviceIdQrCode"/>

            <Button
                android:id="@+id/saveServerUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dialog_enter_server_ok"
                android:onClick="saveServerUrl"/>
    </LinearLayout>

    </LinearLayout>

</layout>