<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/access_to_app_denied"
            android:id="@+id/message"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/package_id"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/access_to_app_denied_2"
            android:id="@+id/message2"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <Button
                android:layout_width="@dimen/block_window_button_width"
                android:layout_height="wrap_content"
                android:id="@+id/layout_application_not_allowed_continue"
                android:textSize="@dimen/button_text_size"
                android:text="@string/dialog_app_not_allowed_close"/>

            <Button
                android:layout_width="@dimen/block_window_button_width"
                android:layout_height="wrap_content"
                android:id="@+id/layout_application_not_allowed_admin"
                android:textSize="@dimen/button_text_size"
                android:text="@string/dialog_app_not_allowed_admin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>