<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="error" type="Boolean"/>
        <variable name="loading" type="Boolean"/>
    </data>

    <LinearLayout
          android:orientation="vertical"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:paddingLeft="@dimen/activity_horizontal_margin"
          android:paddingRight="@dimen/activity_horizontal_margin"
          tools:context="com.base.launcher.ui.MainActivity">

        <TextView
            android:layout_width="@dimen/dialog_enter_device_id_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            bind:boolToVisible="@{error}"
            android:text="@string/wrong_password"/>

        <TextView
            android:layout_width="@dimen/dialog_enter_device_id_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            bind:boolToVisible="@{!error}"
            android:text="@string/enter_admin_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            bind:boolToDisable="@{loading}"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:text="@string/dialog_enter_password_login"
                bind:boolToDisable="@{loading}"
                android:onClick="checkAdministratorPassword"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_enter_password_cancel"
                android:onClick="closeEnterPasswordDialog"/>

        </LinearLayout>

    </LinearLayout>

</layout>