<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
          android:orientation="vertical"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:paddingLeft="@dimen/activity_horizontal_margin"
          android:paddingRight="@dimen/activity_horizontal_margin"
          tools:context="com.base.launcher.ui.MainActivity">

        <TextView
            android:id="@+id/hint"
            android:layout_width="@dimen/dialog_enter_device_id_width"
            android:layout_height="wrap_content"
            android:text="@string/dialog_administrator_mode_message"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/dialog_administrator_mode_skip"
                android:textSize="@dimen/button_text_size"
                android:onClick="skipAdminMode"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/dialog_administrator_mode_continue"
                android:textSize="@dimen/button_text_size"
                android:onClick="setAdminMode"/>

        </LinearLayout>

    </LinearLayout>

</layout>